--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,136 @@
-.App {
+@import url("https://fonts.googleapis.com/css?family=Poppins");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+}
+
+body {
+  font-family: "Poppins";
+}
+
+button {
+  cursor: pointer;
+  font-family: inherit;
+  border: none;
+  border-radius: 5px;
+}
+
+.con {
+  max-width: 1200px;
+  margin: auto;
+}
+.main {
+  margin-top: 2rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 38rem));
+  gap: 1rem;
+  align-items: start;
+  border: 2px dashed #a8a4a4;
+  background-color: #f2f2f2;
+  padding: 1rem;
+}
+
+.media_box {
+  position: relative;
+}
+
+.media_box > video {
+  width: 100%;
+}
+
+.capture_btn {
+  border: 3px solid #8888;
+  width: 4.5rem;
+  height: 4.5rem;
+  background-color: #f2f2f2;
+  position: absolute;
+  bottom: 1.5rem;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 50%;
+  transition: 0.2s linear;
+  z-index: 2;
+}
+.capture_btn:hover {
+  transform: translateX(-50%) scale(1.1);
+  background-color: #bb2522;
+}
+.capture_btn:disabled {
+  background-color: #979292;
+}
+
+div {
+  text-align: center;
+  padding: 12px 0;
+}
+.create_slide_btn {
+  padding: 1.2em 2.8em;
+  font-size: 1rem;
+  background-color: #67a913;
+  color: white;
+}
+.create_slide_btn:hover {
+  background-color: #457409;
+}
+
+.img_box {
+  position: absolute;
+  inset: 0 0 0 0;
+  z-index: 3;
+}
+
+.img_box img {
+  width: 100%;
+  height: auto;
+  object-fit: fill;
+  display: inline-block;
+}
+.slide_box {
+  display: flex;
+  overflow: hidden;
+  max-height: 100%;
+  flex-direction: column;
+}
+
+.slide_box video {
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+.slide_box p {
+  font-size: 1.8rem;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Captured images */
+.btn_red {
+  background-color: hsl(0, 100%, 67%);
+  color: white;
+  font-size: 0.8rem;
+  padding: 0.6em 1em;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn_red:hover {
+  background-color: hsl(0, 87%, 56%);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.captured_imags_con {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 10rem));
+  gap: 2rem;
+}
+.single_img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 1rem;
+  background-color: #ada8a8;
+  padding: 7px;
 }
-
-.App-link {
-  color: #61dafb;
+.single_img img {
+  width: 90%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.single_img button {
+  border: none;
 }
